--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -505,7 +505,7 @@ CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
 CONFIG_PAGE_OFFSET=0xC0000000
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_ARM_PSCI is not set
 CONFIG_LOCAL_TIMERS=y
@@ -3349,9 +3349,9 @@ CONFIG_MSM_MEMORY_DUMP_V2=y
 # CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
 # CONFIG_MSM_DDR_HEALTH is not set
 CONFIG_MSM_COMMON_LOG=y
-CONFIG_MSM_WATCHDOG_V2=y
+# CONFIG_MSM_WATCHDOG_V2 is not set
 CONFIG_MSM_WATCHDOG_CTX_PRINT=y
-CONFIG_MSM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_MSM_DDC is not set
 # CONFIG_MSM_HVC is not set
 # CONFIG_MSM_HYP_DEBUG is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
@@ -3463,7 +3463,9 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
-CONFIG_ESD_FS=y
+# CONFIG_ESD_FS is not set
+CONFIG_SDCARD_FS=y
+CONFIG_CONFIG_SDCARD_FS_ANDROID_PKGLIST=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
