edit build tools

--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -16,6 +16,9 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_SWEEP2SLEEP=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_UKSM=y
+CONFIG_KSM=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -47,7 +50,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Optimus-R15"
+CONFIG_LOCALVERSION="-HMR"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -531,8 +534,7 @@ CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
-CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_BOUNCE=ys
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
