--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -4,21 +4,19 @@
 #
 
 #
-#Optimus
+#Features
 #
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1363200
-CONFIG_MSM_CPU_FREQ_MIN=400000
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_IOSCHED_ZEN=y
-CONFIG_SWEEP2SLEEP=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_SOUND_CONTROL=y
 CONFIG_UKSM=y
 CONFIG_KSM=y
+CONFIG_ZEN_INTERACTIVE=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -50,7 +48,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-HMR"
+CONFIG_LOCALVERSION="-R3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
