--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -8,6 +8,7 @@
 #
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_ADRENO_IDLER=y
@@ -17,6 +18,8 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_UKSM=y
 CONFIG_KSM=y
 CONFIG_ZEN_INTERACTIVE=y
+CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_WESTWOOD=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -709,16 +712,15 @@ CONFIG_INET_TCP_DIAG=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_HTCP is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
