--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -20,6 +20,8 @@ CONFIG_KSM=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
