--- a/arch/arm/hotplug/Kconfig
+++ b/arch/arm/hotplug/Kconfig
@@ -9,3 +9,8 @@ config CLUSTER_PLUG
           This hotplug implementation always keeps the big cluster
           online, and only activates the little cluster for heavy
           parallel loads.
+config ALUCARD_HOTPLUG
+	bool "Enable alucard-hotplug cpu hotplug driver"
+ 	default y
+ 	help
+ 	  Generic Alucard-hotplug cpu hotplug driver for ARM SOCs
