Add in medium overclock max 1.6 ghz cpu / 630 mhz gpu

--- a/arch/arm/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916.dtsi
@@ -24,7 +24,7 @@
 	interrupt-parent = <&intc>;
 
 	chosen {
-		bootargs = "sched_enable_hmp=1";
+		bootargs = "boot_cpus=0,1,2,3  sched_enable_hmp=1";
 	};
 
 	aliases {
@@ -321,7 +321,9 @@
 			< 1152000000 8>,
 			< 1209600000 9>,
                         < 1363200000 10>,
-			< 1401600000 11>;
+			< 1401600000 11>,
+			< 1497600000 12>,
+			< 1593600000 13>;
 
 		qcom,speed1-bin-v0 =
 			<          0 0>,
@@ -332,7 +334,12 @@
 			<  800000000 5>,
 			<  998400000 6>,
 			< 1094400000 7>,
-			< 1152000000 8>;
+			< 1152000000 8>,
+			< 1209600000 9>,
+                        < 1363200000 10>,
+			< 1401600000 11>,
+			< 1497600000 12>,
+			< 1593600000 13>;
 
 		qcom,speed0-bin-v1 =
 			<          0 0>,
@@ -346,7 +353,9 @@
 			< 1152000000 8>,
 			< 1209600000 9>,
                         < 1363200000 10>,
-			< 1401600000 11>;
+			< 1401600000 11>,
+			< 1497600000 12>,
+			< 1593600000 13>;
 
 		qcom,speed2-bin-v1 =
 			<          0 0>,
@@ -359,8 +368,10 @@
 			< 1094400000 7>,
 			< 1152000000 8>,
 			< 1209600000 9>,
-			< 1363200000 10>,
-                        < 1401600000 11>;
+                        < 1363200000 10>,
+			< 1401600000 11>,
+			< 1497600000 12>,
+			< 1593600000 13>;
                       
 	};
 
@@ -408,7 +419,9 @@
 			 < 1152000 >,
 			 < 1209600 >,
 			 < 1363200 >,
-                         < 1401600 >;
+			 < 1401600 >,
+			 < 1497600 >,
+			 < 1593600 >;
 	};
 
 	qcom,sps {
