--- a/arch/arm/boot/dts/qcom/msm8916-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916-moto-common.dtsi
@@ -30,7 +30,10 @@
 			113830 //1094400 kHz
 			128540 //1152000 kHz
 			142800 //1209600 kHz
-			157750>; //1363200 kHz
+			157750 //1363200 kHz
+			160470 //1401600 kHz
+			167270 //1497600 kHz
+			174070>; //1593600 kHz
 		};
 		CPU1: cpu@1 {
 			current = < 23670 //200000 kHz
@@ -41,7 +44,10 @@
 			113830 //1094400 kHz
 			128540 //1152000 kHz
 			142800 //1209600 kHz
-			157750>; //1363200 kHz
+			157750 //1363200 kHz
+			160470 //1401600 kHz
+			167270 //1497600 kHz
+			174070>; //1593600 kHz
 		};
 		CPU2: cpu@2 {
 			current = < 23670 //200000 kHz
@@ -52,7 +58,10 @@
 			113830 //1094400 kHz
 			128540 //1152000 kHz
 			142800 //1209600 kHz
-			157750>; //1363200 kHz
+			157750 //1363200 kHz
+			160470 //1401600 kHz
+			167270 //1497600 kHz
+			174070>; //1593600 kHz
 		};
 		CPU3: cpu@3 {
 			current = < 23670 //200000 kHz
@@ -63,7 +72,10 @@
 			113830 //1094400 kHz
 			128540 //1152000 kHz
 			142800 //1209600 kHz
-			157750>; //1363200 kHz
+			157750 //1363200 kHz
+			160470 //1401600 kHz
+			167270 //1497600 kHz
+			174070>; //1593600 kHz
 		};
 	};
 
