--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -22,6 +22,12 @@ CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_QUICK_WAKEUP=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
+
+#
+#Stock
+#
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
