--- a/arch/arm/boot/dts/qcom/msm8916-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916-regulator.dtsi
@@ -18,7 +18,7 @@
 			regulator-name = "8916_s2";
 			reg = <0x1700 0x100>;
 			regulator-min-microvolt = <1000000>;
-			regulator-max-microvolt = <1385000>;
+			regulator-max-microvolt = <1375000>;
 		};
 	};
 };
@@ -50,8 +50,8 @@
 		regulator-min-microvolt = <1>;
 		regulator-max-microvolt = <13>;
 
-		qcom,cpr-voltage-ceiling = <1000000 1150000 1385000>;
-		qcom,cpr-voltage-floor = <1000000 1050000 125000>;
+		qcom,cpr-voltage-ceiling = <1000000 1150000 1375000>;
+		qcom,cpr-voltage-floor = <1000000 1150000 1275000>;
 		vdd-apc-supply = <&pm8916_s2>;
 
 		qcom,vdd-mx-corner-map = <4 5 7>;
@@ -98,8 +98,8 @@
 					<9 1209600000>,
 					<10 1363200000>,
                                         <11 1401600000>,
-					<12 1497600000>,
-					<13 1593600000>;
+					<12 1536600000>,
+					<13 1612600000>;
 		qcom,speed-bin-fuse-sel = <1 34 3 0>;
 		qcom,pvs-version-fuse-sel = <0 55 2 0>;
 		qcom,cpr-speed-bin-max-corners =
